--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Chess Game</title>
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
   <link rel="stylesheet" href="css/col.css">
   <link rel="stylesheet" href="css/style.css">
@@ -13,7 +13,46 @@
 
 <body>
 
+<section class="ches">
+    <div class="ches__body">
+      <div class="ches__left-btns">
+        <button class="ches__board-btn ">
+          <img class="ches__img" src="images/queen.svg" alt="img">
+        </button>
+        <button class="ches__board-btn">
+          <img class="ches__img"  src="images/king.svg" alt="img">
+        </button>
+        <button class="ches__board-btn ">
+          <img class="ches__img"  src="images/farzin.svg" alt="img">
+        </button>
+        <button class="ches__board-btn ">
+          <img class="ches__img"  src="images/horse.svg" alt="img">
+        </button>
+        <button class="ches__board-btn ">
+          <img class="ches__img"  src="images/fill.svg" alt="img">
+        </button>
+        <button class="ches__board-btn ">
+          <img class="ches__img"  src="images/onthefoot.svg" alt="img">
+        </button>
+      </div>
+      <div class="ches__board">
+        <ul class="ches__list-table">
+
+        </ul>
+      </div>
+      <div class="ches__right-btns">
+        <button class="ches__three-d">
+          3D
+        </button>
+        <p class="ches__text text-x" id="x">x=</p>
+        <p class="ches__text text-y" id="y">y=</p>
+      </div>
+    </div>
+
+</section>
+<script src="js/object.js"></script>
   <script src="js/main.js"></script>
+ 
 </body>
 
 </html>
